crates/strider/tests/snapshots/aarch64__control__nested_loops.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v9" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v9" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "11" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v9" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v12" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v12" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v14" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "13" -> "v14" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "13" -> "v12" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "16" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v14" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v18" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "17" -> "v18" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "17" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "16" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "20" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v18" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "20" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "25" -> "21" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="φ x0", shape=house, fillcolor="#163030"];
  "20" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" [label="φ x0", shape=house, fillcolor="#163030"];
  "16" -> "28" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="φ x3", shape=house, fillcolor="#163030"];
  "11" -> "34" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "36" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="φ x4", shape=house, fillcolor="#163030"];
  "5" -> "39" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "41" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "41" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="φ x0", shape=house, fillcolor="#163030"];
  "11" -> "45" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "45" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" -> "45" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "29" [label="φ x0", shape=house, fillcolor="#163030"];
  "5" -> "29" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "46" -> "29" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "29" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "49" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "51" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="φ x2", shape=house, fillcolor="#163030"];
  "11" -> "53" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "55" -> "53" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "50" -> "55" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "49" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "62" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "64" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "64" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "67" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
